@@ -16,6 +16,8 @@
  - CloudFront methods had dates appended to them. Now all methods don't have the
    date appended, so anyone using CloudFront should be aware of that API change
 
+ - S3 API update: Support for ServerSideEncryption 
+
 0.16 09 Oct 2015
  - docu fixes by Gimpson
  - Timeout for all user agents set to 60 seconds. Will be configurable soon
